# clipp

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/: clipp.h
test/: CMakeLists.txt
